fix: flex-wrap applied

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,10 @@ li {
   flex-direction: column;
 }
 
+.flex-wrap {
+  flex-wrap: wrap;
+}
+
 .flex-shrink-none {
   flex-shrink: 0;
 }
